{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 598,
  "lineage": "8bb4abe4-e4dd-7713-54e6-f631a66e374d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027deddf4a5ca7ac4",
            "domain": "vpc",
            "id": "eipalloc-027deddf4a5ca7ac4",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-189-209-24.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.209.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BASTIONHOST_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0283a57753b18025b",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-05eea70bc203115a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05eea70bc203115a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "anael_premier",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-016a366a52d05e009",
            "private_dns": "ip-10-0-1-143.us-east-2.compute.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-3-17-186-119.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.186.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029f9c3d7d49d5517",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed9669361f8b9fd2",
            "tags": {
              "Environment": "dev",
              "Name": "dev-BASTION001",
              "sshUser": "ubuntu"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-BASTION001",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01988f7bb03a07627"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.SG-bastionhosts",
            "aws_subnet.public-bastion",
            "aws_vpc.main",
            "tls_private_key.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BASTIONHOST_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a36e1502605b4aa",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-03554feb83620a8b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03554feb83620a8b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "anael_premier",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6b6cb534624a13d",
            "private_dns": "ip-10-0-1-183.us-east-2.compute.internal",
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-18-222-161-199.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.161.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0846dd7d44449bb42",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed9669361f8b9fd2",
            "tags": {
              "Environment": "dev",
              "Name": "dev-BASTION002",
              "sshUser": "centos"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-BASTION002",
              "sshUser": "centos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01988f7bb03a07627"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.SG-bastionhosts",
            "aws_subnet.public-bastion",
            "aws_vpc.main",
            "tls_private_key.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SQL_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0283a57753b18025b",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-05e583acb230efd6c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e583acb230efd6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "anael_premier",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3799f0ff66bb03d",
            "private_dns": "ip-10-0-11-30.us-east-2.compute.internal",
            "private_ip": "10.0.11.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb1a1c0156719cf0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e6d87da8d5a75f5",
            "tags": {
              "Environment": "dev",
              "Name": "dev-SQL001",
              "sshUser": "ubuntu"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-SQL001",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06f116cfa31fa4e27"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.SG-backendservers",
            "aws_security_group.SG-bastionhosts",
            "aws_security_group.SG-frontendservers",
            "aws_subnet.private-db",
            "aws_vpc.main",
            "tls_private_key.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WEB_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0283a57753b18025b",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-0bc7592e3bed33b0e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc7592e3bed33b0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "anael_premier",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2d7b332509608d1",
            "private_dns": "ip-10-0-10-79.us-east-2.compute.internal",
            "private_ip": "10.0.10.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043444cc23e703ee8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03804c7d685ad0d68",
            "tags": {
              "Environment": "dev",
              "Name": "dev-WEB001",
              "sshUser": "ubuntu"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-WEB001",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df349c87b5f0e844"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.SG-bastionhosts",
            "aws_security_group.SG-frontendservers",
            "aws_subnet.private-web",
            "aws_vpc.main",
            "tls_private_key.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WEB_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0283a57753b18025b",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-0d2e16bbca97eb40f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2e16bbca97eb40f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "anael_premier",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08f17d5586ebbbeeb",
            "private_dns": "ip-10-0-10-25.us-east-2.compute.internal",
            "private_ip": "10.0.10.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-001db9ac78e7ed749",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03804c7d685ad0d68",
            "tags": {
              "Environment": "dev",
              "Name": "dev-WEB002",
              "sshUser": "ubuntu"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-WEB002",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df349c87b5f0e844"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.SG-bastionhosts",
            "aws_security_group.SG-frontendservers",
            "aws_subnet.private-web",
            "aws_vpc.main",
            "tls_private_key.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WEB_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a36e1502605b4aa",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-00bd089460ed31c8f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bd089460ed31c8f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "anael_premier",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-084a77a10f15b0bea",
            "private_dns": "ip-10-0-10-87.us-east-2.compute.internal",
            "private_ip": "10.0.10.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf9e7be3d5a26de3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03804c7d685ad0d68",
            "tags": {
              "Environment": "dev",
              "Name": "dev-WEB003",
              "sshUser": "centos"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-WEB003",
              "sshUser": "centos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df349c87b5f0e844"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.SG-bastionhosts",
            "aws_security_group.SG-frontendservers",
            "aws_subnet.private-web",
            "aws_vpc.main",
            "tls_private_key.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:internet-gateway/igw-09a893c3c4dc10a66",
            "id": "igw-09a893c3c4dc10a66",
            "owner_id": "729855611727",
            "tags": {
              "Name": "internet_gateway-VPC-dev-Default"
            },
            "tags_all": {
              "Name": "internet_gateway-VPC-dev-Default"
            },
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027deddf4a5ca7ac4",
            "connectivity_type": "public",
            "id": "nat-0e54ab037e0d79074",
            "network_interface_id": "eni-0147c963bd8fd8c16",
            "private_ip": "10.0.2.181",
            "public_ip": "18.189.209.24",
            "subnet_id": "subnet-02873d3bcf20f8c31",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public-nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:route-table/rtb-0cbb27932889af97a",
            "id": "rtb-0cbb27932889af97a",
            "owner_id": "729855611727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a893c3c4dc10a66",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Default route table to internet"
            },
            "tags_all": {
              "Name": "Default route table to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:route-table/rtb-0fbc243ebe1001ce1",
            "id": "rtb-0fbc243ebe1001ce1",
            "owner_id": "729855611727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e54ab037e0d79074",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Default route table to NAT"
            },
            "tags_all": {
              "Name": "Default route table to NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat",
            "aws_subnet.public-nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0989800c42bac37b3",
            "route_table_id": "rtb-0fbc243ebe1001ce1",
            "subnet_id": "subnet-01e6d87da8d5a75f5"
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat",
            "aws_route_table.nat",
            "aws_subnet.private-db",
            "aws_subnet.public-nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e2610628cd9356a",
            "route_table_id": "rtb-0fbc243ebe1001ce1",
            "subnet_id": "subnet-03804c7d685ad0d68"
          },
          "dependencies": [
            "aws_eip.example",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat",
            "aws_route_table.nat",
            "aws_subnet.private-web",
            "aws_subnet.public-nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d4b19fe382c722a",
            "route_table_id": "rtb-0cbb27932889af97a",
            "subnet_id": "subnet-0ed9669361f8b9fd2"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.default",
            "aws_subnet.public-bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f02b0828c8b95bc",
            "route_table_id": "rtb-0cbb27932889af97a",
            "subnet_id": "subnet-02873d3bcf20f8c31"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.default",
            "aws_subnet.public-nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-backendservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-06f116cfa31fa4e27",
            "description": "Security group for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f116cfa31fa4e27",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming PostgreSQL traffic from web servers",
                "from_port": 6432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df349c87b5f0e844"
                ],
                "self": false,
                "to_port": 6432
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from bastion hosts",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01988f7bb03a07627"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-backendservers",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-db"
            },
            "tags_all": {
              "Name": "SG-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-bastionhosts",
            "aws_security_group.SG-frontendservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-bastionhosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-01988f7bb03a07627",
            "description": "Security group for bastion hosts",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01988f7bb03a07627",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming ICMP from management IPs",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH from management IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-bastionhosts",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-bastionhosts"
            },
            "tags_all": {
              "Name": "SG-bastionhosts"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-frontendservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-0df349c87b5f0e844",
            "description": "Security group for web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df349c87b5f0e844",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from bastion hosts",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01988f7bb03a07627"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from bastion hosts",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01988f7bb03a07627"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-web",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-web"
            },
            "tags_all": {
              "Name": "SG-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-bastionhosts",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-01e6d87da8d5a75f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e6d87da8d5a75f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-db"
            },
            "tags_all": {
              "Name": "Subnet-db"
            },
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-03804c7d685ad0d68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03804c7d685ad0d68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-web"
            },
            "tags_all": {
              "Name": "Subnet-web"
            },
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-0ed9669361f8b9fd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed9669361f8b9fd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-bastion1"
            },
            "tags_all": {
              "Name": "Subnet-bastion1"
            },
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-02873d3bcf20f8c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02873d3bcf20f8c31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-nat"
            },
            "tags_all": {
              "Name": "Subnet-nat"
            },
            "vpc_id": "vpc-0d718ed5ba754504c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:vpc/vpc-0d718ed5ba754504c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7ad5d281dbffcc6",
            "default_route_table_id": "rtb-060a3a7a9e5673c1f",
            "default_security_group_id": "sg-0b0a24b8b7a14902f",
            "dhcp_options_id": "dopt-0b1f95f4d053dd89a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d718ed5ba754504c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060a3a7a9e5673c1f",
            "owner_id": "729855611727",
            "tags": {
              "Name": "VPC-dev"
            },
            "tags_all": {
              "Name": "VPC-dev"
            }
          }
        }
      ]
    }
  ]
}